2020-10-21 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 5.0.0

2020-10-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Use ImporterAwareTrait in AbstractStep, resolves #149
	* Rename "userFunc" property to "userFunction" (and "params" to "parameters"), resolves #150

2020-10-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add example function for importing images in base64 format, resolves #145
	* Add missing renderType information to log table (thanks to Mathias Brodala)
	* Allow parameters to be passed to custom steps, resolves #130

2020-10-17 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ship own version of DataTables, resolves #144
	* Rely only on default mail address for sending report, resolves #139
	* Adapt to changed mail API

2020-10-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Actually delete records when "insert" and "update" operations are disabled, resolves #88
	* Move old upgrade instructions to an appendix, resolves #138
	* Remove obsolete note about autoloading, resolves #141

2020-10-11 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve explanations about importing many-to-many relations, resolves #70

2020-10-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Import nested structures, resolves #68

2020-10-09 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Allow garbage collection of log entries (thanks to Mathias Brodala)

2020-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Use Query Builder consistently in UidRepository

2020-10-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve handling of additional fields, resolves #69

2020-09-30 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Move general configuration to own "space" in the TCA, resolves #140

2020-09-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Enforce strict Scheduler dependency, resolves #129

2020-09-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 4.3.3
